[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Kota/Kota.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Arial_Rounded_MT.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Package/GUI Items/circHoover.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[node name="Kota" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0156863, 0.121569, 0.972549, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )
[connection signal="draw" from="." to="." method="_on_Kota_draw"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
